--- a/app/views/products/edit_licenses.html
+++ b/app/views/products/edit_licenses.html
@@ -51,8 +51,8 @@
 
         <table>
           <colgroup>
-            <col width="80px;"></col>
-            <col width="*"></col>
+            <col width="80px;"j />
+            <col width="*" />
           </colgroup>
 
           <% licenses.each do |license| %>
