--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -8,18 +8,18 @@
     <% end %>
   </div>
 
-    <% unless current_user %>
+    <% if current_user %>
+      <div class="pull-right opacity_section" style="margin-left: 1px;" >
+        <a id="projects" href="<%= user_projects_path %>">
+          <i class = "icon-archive">&nbsp;</i>Projects
+        </a>
+      </div>
+    <% else %>
       <div class="pull-right opacity_section" style="margin-left: 1px;" >
         <a id="signin" href="/signin" ><i class="icon-signin">&nbsp;</i>Sign in</a>
       </div>
       <div class="pull-right opacity_section" style="margin-left: 1px;" >
         <a id="signup" href="/signup" ><i class="icon-thumbs-up">&nbsp;</i>Sign up</a>
-      </div>
-    <% else %>
-      <div class="pull-right opacity_section" style="margin-left: 1px;" >
-        <a id="signin" href="<%= user_projects_path %>">
-          <i class = "icon-archive">&nbsp;</i>Projects
-        </a>
       </div>
     <% end %>
 
