--- a/app/views/shared/_pricing.html.erb
+++ b/app/views/shared/_pricing.html.erb
@@ -5,7 +5,7 @@
 		<div class="span2" style="padding: 0px;" ><%= plan.name %></div>
 		<div class="span2" style="padding: 0px; width: 100px; "><%= plan.price %> $ / Month</div>
 		<div class="span2" style="padding: 0px; "><%= plan.private_projects %> Private Projects</div>
-		<% if !@plan.nil? %>
+		<% if @plan %>
 			<div class="span2 pull-right" style="padding: 0px; width: 150px;" >
 				<% if @plan && @plan.name_id.eql?( plan.name_id ) %>
 					<span style="color: green; font-weight:bold">Current</span>
