--- a/app/views/products/edit_links.html.erb
+++ b/app/views/products/edit_links.html.erb
@@ -42,8 +42,8 @@
       <% if !version_links.empty? %>
         <table>
           <colgroup>
-            <col width="80px;"></col>
-            <col width="*"></col>
+            <col width="80px;" />
+            <col width="*" />
           </colgroup>
         <% version_links.each do |link| %>
           <% if link.manual  %>
