--- a/app/views/shared/_language_icons.html.erb
+++ b/app/views/shared/_language_icons.html.erb
@@ -1,6 +1,6 @@
 <% if icon.nil? %>
-	<% if !language.nil? && !language.empty? %>
-		<% if !link.nil? %>
+	<% if language && !language.empty? %>
+		<% if link %>
 			<a href="<%= link %>">
 				<div class="icon_<%= language.gsub('.', '').downcase %> on"
 					 id="<%= link %>_<%= language.downcase %>_icon"
