--- a/app/views/users/favoritepackages.html.erb
+++ b/app/views/users/favoritepackages.html.erb
@@ -23,7 +23,7 @@
         </h2>
       </div>
 
-      <% if !signed_in? %>
+      <% unless signed_in? %>
         <%= render 'shared/dialog_follow' %>
       <% end %>
       <%= render :partial => "products/show_search_results_iterator", :locals => { :products => @products, :prefix => "user", :name_limit => 70 } %>
