--- a/app/views/products/helpers/_file_upload.html.erb
+++ b/app/views/products/helpers/_file_upload.html.erb
@@ -9,7 +9,7 @@
         dependency.gradle, project.clj, Podfile, Podfile.lock
       </div>
 
-      <%= form_tag "/services", :multipart => true, :accept => "text/xml", :style => "margin: 0;"  do |f|  %>
+      <%= form_tag "/services", :multipart => true, :accept => "text/xml", :style => "margin: 0;" do %>
         <div >
           <div class = "fileupload fileupload-new" data-provides="fileupload">
             <span class = "btn btn-file">
