--- a/app/views/services/show.html.erb
+++ b/app/views/services/show.html.erb
@@ -6,10 +6,10 @@
 
         <ul class = "nav nav-tabs" style="margin-bottom: 0" id="projectTabs">
           <li class = "active">
-            <a href = "#dependencies" data-toggle="tab">Dependencies</a>
+            <a href = "#dependencies_tab" data-toggle="tab">Dependencies</a>
           </li>
           <li>
-            <a href = "#licenses" data-toggle="tab">Licenses</a>
+            <a href = "#licenses_tab" data-toggle="tab">Licenses</a>
           </li>
         </ul>
 
