--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -7,7 +7,7 @@
     <%= link_to t(:page_footer_statistics), statistics_path %> |
     <a href="JavaScript: load_dialog_feedback()">Feedback</a> |
     <a href="http://versioneye.wordpress.com/" target="new_Blog">Company Blog</a> |
-    <%= link_to "API v2", version_eye_api_path(version: "v2") %>
+    <%= link_to "API", version_eye_api_path %>
   </div>
 
   <div class="container row" style="text-align: center; margin-bottom: 20px; font-size: 11px;">
