--- a/app/views/settings/_navi.html.erb
+++ b/app/views/settings/_navi.html.erb
@@ -10,6 +10,6 @@
   <li><%= link_to 'Password'           , settings_password_path %></li>
   <li><%= link_to 'Notification Center', settings_notifications_path %></li>
   <li><%= link_to 'Privacy'            , settings_privacy_path %></li>
-  <li><%= link_to 'API'                , settings_api_path %></li>
+  <li><%= link_to 'API Key'            , settings_api_path %></li>
   <li><%= link_to 'Delete'             , settings_delete_path %></li>
 </ul>
