--- a/app/views/shared/_dialog_login_feature.html.erb
+++ b/app/views/shared/_dialog_login_feature.html.erb
@@ -1,8 +1,8 @@
 <div class="modal hide fade" id="dialog_login_feature" tabindex="-1"
-  role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  role="dialog" aria-labelledby="modal_login" aria-hidden="true">
   <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-    <h3 id="myModalLabel">Sign Up</h3>
+    <h3 id="modal_login">Sign Up</h3>
   </div>
   <div class="modal-body" >
 
