--- a/app/views/products/_show_search_results_iterator.html.erb
+++ b/app/views/products/_show_search_results_iterator.html.erb
@@ -41,7 +41,7 @@
 
         <% else %>
 
-          <button id="button_<%= product.prod_key %>" type="submit" class="btn btn-success btn-medium" onclick="load_dialog_follow('<%= product.name %>', '<%= product.prod_key %>', '<%= product.language %>');" >Follow</button>
+          <button id="button_<%= product.language_esc %>_<%= product.prod_key %>" type="submit" class="btn btn-success btn-medium" onclick="load_dialog_follow('<%= product.name %>', '<%= product.prod_key %>', '<%= product.language %>');" >Follow</button>
 
         <% end %>
       </div>
