#419 Refactor the current settings with more text

--- a/app/views/user/projects/_project_settings.html.erb
+++ b/app/views/user/projects/_project_settings.html.erb
@@ -2,10 +2,13 @@
 <% if current_user?(@project.user) %>
   <div style="margin-top: 20px;" id="settings_area">
     <form action="<%= save_period_user_project_path(@project) %>" method="post" class="form-horizontal" >
+      <div>
+        Choose how frequently this project should be checked. After every check we will send out email notifications.
+      </div>
       <div class="control-group">
-        <label class="control-label" style="width: 200px;" >Monitor it</label>
-        <div class="controls" style="margin-left: 210px;">
-          <select name="period" style="width: 150px; margin: 0px;" >
+
+        <div class="controls" style="margin-left: 0px;">
+          <select name="period" >
             <option value="<%= Project::A_PERIOD_DAILY %>"   <%= "selected" if @project.period == Project::A_PERIOD_DAILY   %> >Daily</option>
             <option value="<%= Project::A_PERIOD_WEEKLY %>"  <%= "selected" if @project.period == Project::A_PERIOD_WEEKLY  %> >Weekly</option>
             <option value="<%= Project::A_PERIOD_MONTHLY %>" <%= "selected" if @project.period == Project::A_PERIOD_MONTHLY %> >Monthly</option>
@@ -15,10 +18,12 @@
     </form>
 
     <form action="<%= save_email_user_project_path(@project) %>" method="post" class="form-horizontal" >
+      <div>
+        Choose the email address we should send the notifications to.
+      </div>
       <div class="control-group">
-        <label class="control-label" style="width: 200px;" >Send notifications to</label>
-        <div class="controls" style="margin-left: 210px;">
-          <select name="email" style="width: 150px; margin: 0px;" >
+        <div class="controls" style="margin-left: 0px;">
+          <select name="email" >
             <option value="<%= current_user.email %>"  <%= "selected" if @project.email == current_user.email %> ><%= current_user.email %></option>
             <% current_user.emails_verified.each do |user_email| %>
               <option value="<%= user_email.email %>" <%= "selected" if @project.email == user_email.email %> ><%= user_email.email %></option>
@@ -29,10 +34,14 @@
     </form>
 
     <form action="<%= save_visibility_user_project_path(@project) %>" method="post" class="form-horizontal" >
+      <div>
+        By default all projects are private, so that only you and your collaborators can see it.
+        If you make it public you can share the link to this project and everybody can
+        see the dependencies and licenses of this project.
+      </div>
       <div class="control-group">
-        <label class="control-label" style="width: 200px;" >This Project is</label>
-        <div class="controls" style="margin-left: 210px;">
-          <select name="visibility" style="width: 150px; margin: 0px;" >
+        <div class="controls" style="margin-left: 0px;">
+          <select name="visibility" >
             <option value="private"  <%= "selected" if !@project.public %> >Private</option>
             <option value="public"   <%= "selected" if @project.public %> >Public</option>
           </select> <button type="submit" class="btn btn-primary" >Save</button>
