--- a/app/views/user/projects/_project_settings.html.erb
+++ b/app/views/user/projects/_project_settings.html.erb
@@ -48,6 +48,22 @@
         </div>
       </div>
     </form>
+
+    <form action="<%= save_notify_after_api_update_user_project_path(@project) %>" method="post" class="form-horizontal" >
+      <div>
+        Choose if you want to get an email notification after this project was updated through our API. That
+        is for example the case if you use the VersionEye GitHub Hook or our Maven Plugin.
+      </div>
+      <div class="control-group">
+        <div class="controls" style="margin-left: 0px;">
+          <select name="notify" >
+            <option value="<%= Project::A_NOTIFY_AFTER_API_UPDATE_NOTIFY %>"  <%= @project.notify_after_api_update.to_s.eql?('true')  ? 'selected' : '' %> >Notify after update via API</option>
+            <option value="<%= Project::A_NOTIFY_AFTER_API_UPDATE_SILENT %>"  <%= @project.notify_after_api_update.to_s.eql?('false') ? 'selected' : '' %> >Stay silent</option>
+          </select> <button type="submit" class="btn btn-primary" >Save</button>
+        </div>
+      </div>
+    </form>
+
   </div>
 <% else %>
   <% collaboration = @project.collaborator( current_user ) %>
