Refactoring for project detail view. Opt. instance variable and memory usage

--- a/app/views/user/projects/_collaborators.html.erb
+++ b/app/views/user/projects/_collaborators.html.erb
@@ -37,5 +37,5 @@
 </script>
 
 <div class = "media">
-  <%= render partial: "collaborator" , collection: @collaborators %>
+  <%= render partial: "collaborator" , collection: @project.collaborators %>
 </div>
