--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -914,3 +914,8 @@ img.centered {
 .license_seperator{
   border-top: 1px dashed gray
 }
+
+.license_box{
+  border-bottom: 1px solid lightgray;
+  padding-right: 5px;
+}
